@@ -4,8 +4,13 @@ module ActiveScaffold
     # Helpers that assist with the rendering of a List Column
     module ListColumnHelpers
       def get_column_value(record, column)
-        method = get_column_method(record, column)
-        value = send(method, record, column)
+        record = record.send(column.delegated_association.name) if column.delegated_association
+        if record
+          method = get_column_method(record, column)
+          value = send(method, record, column)
+        else
+          value = nil
+        end
         value = '&nbsp;'.html_safe if value.nil? || value.blank? # fix for IE 6
         return value
       rescue StandardError => e
@@ -282,17 +287,14 @@ module ActiveScaffold
 
       def inplace_edit_control(column)
         return unless inplace_edit?(active_scaffold_config.model, column) && inplace_edit_cloning?(column)
-        old_record, @record = @record, active_scaffold_config.model.new # TODO: remove when relying on @record is removed
         column = column.clone
         column.options = column.options.clone
         column.form_ui = :select if column.association && column.form_ui.nil?
-        options = active_scaffold_input_options(column).merge(:object => active_scaffold_config.model.new)
+        options = active_scaffold_input_options(column).merge(:object => column.active_record_class.new)
         options[:class] = "#{options[:class]} inplace_field"
         options[:"data-id"] = options[:id]
         options[:id] = nil
-        content_tag(:div, active_scaffold_input_for(column, nil, options), :style => 'display:none;', :class => inplace_edit_control_css_class).tap do
-          @record = old_record # TODO: remove when relying on @record is removed
-        end
+        content_tag(:div, active_scaffold_input_for(column, nil, options), :style => 'display:none;', :class => inplace_edit_control_css_class)
       end
 
       def inplace_edit_control_css_class
